ye pas le noindex

--- a/nginx.conf
+++ b/nginx.conf
@@ -15,7 +15,7 @@ http {
         listen 0.0.0.0:49300;
         server_name loult.local;
         
-        add_header X-Robots-Tag "noindex, nofollow";
+        # add_header X-Robots-Tag "noindex, nofollow";
         root /home/TONCHEMIN/loult/static;
         
         location ~ \.(css|js)$ {
