--- a/nginx.conf
+++ b/nginx.conf
@@ -19,7 +19,7 @@ http {
         root /home/TONCHEMIN/loult/static;
         
         location ~ \.(css|js)$ {
-            expires off;
+            expires -1;
         }
         location ~ \.gif$ {
             expires max;
