--- a/nginx.conf
+++ b/nginx.conf
@@ -30,6 +30,7 @@ http {
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
+            proxy_set_header X-Real-IP $remote_addr;
             proxy_read_timeout 120s;
         }
         
