--- a/nginx.conf
+++ b/nginx.conf
@@ -1,43 +1,29 @@
-
-worker_processes  1;
-
-events {
-    worker_connections  1024;
-}
-
-http {
-    include       mime.types;
-    default_type  application/octet-stream;
-
-    sendfile        on;
+server {
+    listen 49300;
+    server_name loult.local;
+    # add_header X-Robots-Tag "noindex, nofollow";
+    root /home/YOUR_PATH/loult/static;
+    index index.html;
     
-    server {
-        listen 0.0.0.0:49300;
-        server_name loult.local;
-        
-        # add_header X-Robots-Tag "noindex, nofollow";
-        root /home/TONCHEMIN/loult/static;
-        
-        location ~ \.(css|js)$ {
-            expires -1;
-        }
-        location ~ \.gif$ {
-            expires max;
-        }
-        
-        location /socket/ {
-            proxy_pass http://localhost:9000;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "upgrade";
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_read_timeout 120s;
-        }
-        
-        location / {
-            try_files $uri /index.html;
-            expires -1;
-        }
+    location ~ \.(css|js)$ {
+        expires -1;
     }
-
+    
+    location ~ \.gif$ {
+        expires max;
+    }
+    
+    location /socket/ {
+        proxy_pass http://localhost:9000;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_read_timeout 120s;
+    }
+    
+    location / {
+        try_files $uri /index.html;
+        expires -1;
+        }
 }
