--- a/loult.conf
+++ b/loult.conf
@@ -1,3 +1,4 @@
+limit_req_zone $binary_remote_addr zone=socket:1m rate=30r/m;
 server {
     listen 49300;
     server_name loult.local;
@@ -14,6 +15,7 @@ server {
     }
     
     location /socket/ {
+        limit_req zone=socket burst=5;
         proxy_pass http://localhost:9000;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
