Strengthen the antiflood system.
This implied removing the "automute", as it consumed resources
and allowed for denials of service. Better rules for netfilter
have also been added to defend against very large numbers of
messages which would also lead to a denial of service against
the python process.

--- a/os/ipset.service
+++ b/os/ipset.service
@@ -1,7 +1,7 @@
 [Unit]
 Description=IP Set Netfilter Extension
 Wants=network-pre.target
-Before=network-pre.target
+Before=iptables.service
 DefaultDependencies=false
 
 [Service]
