--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ numpy>=1.12.0
 scipy>=0.18.1
 txaio>=2.5.2
 six>=1.10.0
+resampy>=0.1.5
 -e git+https://github.com/hadware/python-audio-effects.git#egg=pysndfx
 -e git+https://github.com/hadware/voxpopuli.git#egg=voxpopuli
 -e git+https://github.com/hadware/katalixia.git#egg=katalixia
