--- a/install/loult-ng.service
+++ b/install/loult-ng.service
@@ -5,6 +5,7 @@ After=network.target
 [Service]
 User=YOUR-USER
 Group=www-data
+Restart=on-failure # happy now chenipotte?
 WorkingDirectory=/path/to/the/loult-ng
 Environment="PATH=/path/to/the/loult/venv/bin:/usr/bin"
 ExecStart=/path/to/the/loult-ng/venv/bin/python poke.py
