--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ resampy>=0.1.5
 scipy>=0.18.1
 six>=1.10.0
 txaio>=2.5.2
+uvloop==0.11.1
 wheel>=0.29
 -e git+https://github.com/hadware/python-audio-effects.git#egg=pysndfx
 -e git+https://github.com/hadware/voxpopuli.git#egg=voxpopuli
