Ajoutèw des thèmes pour un event
Former-commit-id: 4fb05eac8e6f1093bdcfa4c09a6e30c10fd0bf77

--- a/tools/events/data/themes.yml
+++ b/tools/events/data/themes.yml
@@ -1,3 +1,39 @@
-- name : le cercle des pwètes disparuw
+- description : le cercle des pwètes disparuw
   names : [Baudelaire, Verlaine, Rimbaud, Aragon, Ronsard, Lamartine, Mallarmé, Hugo,
-  Prévert, Du Bellay, De Nerval, Valéry, ]
+  Prévert, Du Bellay, De Nerval, Valéry, Ruteboeuf, Gautier]
+- description : l'école du Loult
+  names : [Schopenhauer, Aristote, Plotin, Hegel, Bergson, Spinoza, Camus, Sartre, Derrida, Foucault,
+  Marx, Kant, Descarte, Montesquieu, Humes, Wittgenstein, Platon, Socrate, Nietzsche, Épicure,
+  Deleuze, Hobbes, Machiavel, Pascal, Kierkegaard]
+- description : un repère de fachwe
+  names : [Hitler, Franco, Mussolini, Salazar, KimJongIl, Ceaucescu, PolPot, Kadhafi, Mugabe, Staline,
+  Castro, Batista, HoChiMinh, Hussein, Mao, Tito, el-Assad, Komeini, Pinochet, Moubarak]
+- description : l'équipe de France 1998
+  names : [Bathez, Thuram, Desailly, Leboeuf, Lizarazu, Deschamps, Karambeu, Petit, Zidane, Djorkaeff,
+  Guivarc'h]
+- description : l'équipe de France 2018
+  names : [Lloris, Pavard, Hernandez, Varane, Umtiti, Pogba, Kanté, Mbappé, Griezmann, Matuidi, Giroud]
+- description : une réduction ad genitalia
+  names : [Chibre, Utérus, Vagin, Anus, Fion, Cul, Testicule, Braquemard, Orifice, Pénis, Gland,
+  Rectum, Clitoris]
+- description : une éminente équipe de chercheurs
+  names : [Maxwell, Gauss, D'Alembert, Einstein, Curie, Poincaré, Galois, Darwin, Fourier, Newton,
+  Lavoisier, Pasteur, Bohr, Faraday, DeVinci, Shrödinger, Euler, Planck, Mendeleev, Heisenberg,
+  Lautentz, Riemann, Becquerel, Laplace, Copernic, Galilée, Ramanujan, Archimède, Cauchy, vonNeumann,
+  Shannon, Gödel, Turing, Lebesgue, Fermat]
+- description : l'Olympe
+  names : [Zeus, Héra, Athéna, Arès, Héphaïstos, Aphrodite, Demeter, Hadès, Poséidon, Dyonisos, Artémis,
+  Hermès]
+- description : la couronne de France
+  names : [Clovis, Clodomir, Childebert, Clotaire, Théodebert, Théodebald, Caribert,
+  Chilpéric, Gontran, Sigebert, Childebert, Dagobert, Charles Martel, PépinLeBref, Louis Ier, Lothaire,
+  Hugues Capet, Louis II, Louis III, Louis IV, Louis V, Louis VI, Louis VII, Phillipe IV, Saint-Louis,
+  Phillipe Auguste, Charles V, Henri II, Charles IX, Henri IV, François Ier, Louis XV, Louis XVI, Louis XIV,
+  Napoléon Ier, Charles IV, Louis X]
+- description : un conservatoiw
+  names : [Mozart, Beethoven, Bach, Brahms, Wagner, Chopin, Debussy, Haydn, Schubert, Tchaikovsky,
+  Stravinsky, Berlioz, Schumann, Vivaldi, Ravel, Verdi, Saint-Saëns, Fauré, Strauss, Paganini, Rameau,
+  Purcell, Lully, Liszt, Dvorak, Shostakovitch, Rachmaninov, Prokofiev]
+- description : une soirée avec agu
+  names : [Cannabis, DMT, LSD, MDMA, Speed, Coke, Psylocibe, Alcool, Poppers, Datura, Mescaline,
+  Hashish, Héroïne, Crack, Nicotine]
