Du bugfix a sa we

--- a/tools/events/data/themes.yml
+++ b/tools/events/data/themes.yml
@@ -37,3 +37,6 @@
 - description : une soirée avec agu
   names : [Cannabis, DMT, LSD, MDMA, Speed, Coke, Psylocibe, Alcool, Poppers, Datura, Mescaline,
   Hashish, Héroïne, Crack, Nicotine]
+- description : un morpeug
+  names : [Guerrier, Paladin, Voleur, Chasseur, Chaman, Druide, Mage, Démoniste, Moine,
+  Prêtre, PNJ, Boss, Noob, Newbie]
