Fix des messages
Former-commit-id: cf327077350f18be6cda47090175283407a345d5

--- a/tools/events/data/themes.yml
+++ b/tools/events/data/themes.yml
@@ -9,7 +9,7 @@
   names : [Hitler, Franco, Mussolini, Salazar, KimJongIl, Ceaucescu, PolPot, Kadhafi, Mugabe, Staline,
   Castro, Batista, HoChiMinh, Hussein, Mao, Tito, el-Assad, Komeini, Pinochet, Moubarak]
 - description : l'équipe de France 1998
-  names : [Bathez, Thuram, Desailly, Leboeuf, Lizarazu, Deschamps, Karambeu, Petit, Zidane, Djorkaeff,
+  names : [Barthez, Thuram, Desailly, Leboeuf, Lizarazu, Deschamps, Karambeu, Petit, Zidane, Djorkaeff,
   Guivarc'h]
 - description : l'équipe de France 2018
   names : [Lloris, Pavard, Hernandez, Varane, Umtiti, Pogba, Kanté, Mbappé, Griezmann, Matuidi, Giroud]
