Ajouté des nouveaux objets, effets sonores rétro pour les errurs objets.
Former-commit-id: d719c2e5b1cf45076f5043c3bb5fe7067c9d495b

--- a/tools/objects/data/alcohols.yml
+++ b/tools/objects/data/alcohols.yml
@@ -11,7 +11,7 @@
     - Knob Creek
     - Loch Lomond
     - Woodford Reserve
-- name: Bière
+- name: bière
   brands: 
     - Les 3 Brasseurs
     - 3 Monts
@@ -69,7 +69,7 @@
     - Diplomático
     - Saint-James
     - Trois Rivières
-- name: Pastis
+- name: pastis
   brands:
     - 51
     - Ricard
